--- a/my-app/package.json
+++ b/my-app/package.json
@@ -5,6 +5,10 @@
   "dependencies": {
     "@apollo/client": "^3.2.3",
     "@blueprintjs/core": "^4.13.0",
+    "@types/jest": "^29.2.5",
+    "@types/node": "^18.11.18",
+    "@types/react": "^18.0.26",
+    "@types/react-dom": "^18.0.10",
     "apollo-utilities": "^1.0.26",
     "graphql": "^14.0.2",
     "graphql-tag": "^2.10.0",
